--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Aplikacja ToDo</title>
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='style.css')}}">
   </head>
 <body>
   <h1>Aplikacja ToDo</h1>
